<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Zef Draw</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_erase">Erase</string>
    <string name="tool_rect">Rectangle</string>
    <string name="tool_line">Line</string>
    <string name="tool_square">Square</string>
    <string name="tool_circle">Circle</string>
    <string name="tool_oval">Oval</string>
    <string name="tool_width">Width</string>
    <string name="tool_bg">Background</string>
    <string name="tool_fg">Foreground</string>
    <string name="tool_done">Done</string>
    <string name="desc">An Image</string>
    <string name="tools_dialog_title">Configure Tool</string>
    <string name="colour_chooser_dialog_title">Choose Colour</string>
    <string name="width_done">Set</string>
    <string name="title_activity_login">Login</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">Zef Draw</string>
    <string name="creds">Shane Steszyn and Jacob Gagne</string>

    <string name="username_email">Username / Email</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="signin">Sign in</string>
    <string name="assignmentlevel">V.4.0.1</string>

    <string name="missing">Fill in both fields</string>
    <string name="actions">Erase/Undo</string>
    <string name="tools">Change Tool</string>
    <string name="signout">Sign Out</string>

    <string name="need_signup">Need an account? <b>Sign Up</b></string>
    <string name="signup">Sign Up</string>
    <string name="back_signin">Go back to Sign In</string>

    <string name="welcome">Good day </string>
    <string name="auth_failed">Invalid login zef</string>
    <string name="conn_error">Cannot connect to zef servers</string>

    <string name="login_progress_title">Patience</string>
    <string name="login_progress_text">We are logging you in, patience is a virtue</string>
    <string name="title_activity_picture_list">PictureList</string>

    <!-- PlaceHolders -->

    <string name="name">Name</string>
    <string name="num_shapes">shapes</string>

</resources>