<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:orientation="vertical">

        <LinearLayout
            android:background="@color/teal"
            android:layout_width="match_parent"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:paddingTop="80dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:textColor="@color/on_teal_text"
                android:text="@string/title" />

            <TextView
                android:paddingTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingBottom="15dp"
                android:textColor="@color/on_teal_text"
                android:text="@string/creds" />

        </LinearLayout>

        <LinearLayout
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:paddingTop="50dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/username"
                android:textColor="@color/teal"
                android:textColorHint="@color/light_teal"
                android:hint="@string/username_email"
                android:inputType="textEmailAddress"
                android:textColorHighlight="@color/light_teal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/password"
                android:textColor="@color/teal"
                android:paddingTop="20dp"
                android:textColorHint="@color/light_teal"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHighlight="@color/light_teal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:visibility="gone"
                android:paddingTop="20dp"
                android:id="@+id/reg_email"
                android:textColor="@color/teal"
                android:textColorHint="@color/light_teal"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:textColorHighlight="@color/light_teal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <Button
                android:id="@+id/submit"
                android:gravity="center"
                android:background="@drawable/signinbutton"
                android:textColor="@color/on_teal_text"
                android:text="@string/signin"
                android:layout_marginTop="40dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/need"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColor="@drawable/teal_text_clickable"
                android:text="@string/need_signup" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:gravity="center"
                android:textColor="@color/light_teal"
                android:text="@string/assignmentlevel" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>